Corrected shortcut for clone vouchers. Also added word wrap for voucher No.

--- a/gkwebapp/static/css/mainshellstyle.css
+++ b/gkwebapp/static/css/mainshellstyle.css
@@ -3,6 +3,7 @@ ul.scrollable {
 	max-height: 580px;
 	overflow-x: scroll;
 }
+body{overflow-y:auto;}
 .shadow {
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
